# Movie-Backend-api

./: .gitignore  DATABASE_DOCUMENTATION.md  README.md  analyze_csv.py  app.py  csv_to_sqlite.py  main.py  pyproject.toml  requirements.txt
config/: settings.py
routes/: collaborative.py  content_based.py
utils/cli/: data_processor.py  recommender.py
utils/collaborative_filtering/: cf_data_processor.py
